[package]
name = "Mori"
version = "2.0.0"
edition = "2024"
authors = ["Cendy"]

[dependencies]
bitflags = "2"
rand = "0.9"
axum = { version = "0.8.8", features = ["ws"] }
rusty_enet = { git = "https://github.com/CLOEI/rusty_enet" }
tokio = { version = "1.50.0", features = ["full"] }
ureq = { version = "3.3.0", features = ["cookies", "socks-proxy"] }
md5 = "0.7"
regex = "1"
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
anyhow = "1.0.102"
mlua = { version = "0.11.6", features = ["lua55", "vendored", "anyhow"]}
