[package]
name = "gt-core"
version = "0.1.0"
edition = "2024"
authors = ["Cendy"]

[dependencies]
rusty_enet = { git = "https://github.com/CLOEI/rusty_enet.git" }
gtitem-r = { git = "https://github.com/CLOEI/gtitem-r.git" }
gtworld-r = { git = "https://github.com/CLOEI/gtworld-r.git" }
ureq = { version = "3.1.0", features = ["cookies", "json", "socks-proxy" ]}
rand = "0.9.2"
urlencoding = "2.1.3"
sha2 = "0.11.0-rc.0"
hex = "0.4.3"
md5 = "0.8.0"
anyhow = "1.0.99"
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
regex = "1.11.2"
byteorder = "1.5.0"
flate2 = "1.1.2"
mlua = { version = "0.11.3", features = ["lua54", "vendored", "send"] }
bitflags = "2.9.4"
